[package]
name = "rain-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
clap = { version = "4", default-features = false, features = ["std", "help", "usage"] }
rand = "0.9"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
